feat: update environment configuration and add required variables
- Updated .env.example to include required variables for database, CORS, and authentication.
- Added Caddyfile for local development reverse proxy setup.
- Modified Makefile to include a new target for starting Caddy proxy with Next.js.
- Updated frontend Dockerfile to pass SERVER_API_URL as an argument.
- Enhanced tenant redirect logic in layout.tsx to support NEXT_PUBLIC_APP_BASE_URL.
- Refactored login page to utilize new host information functions.
- Improved cookie handling in auth routes with shared cookie options.
- Created server-config.ts for backend origin retrieval.
- Updated axios client to handle token refresh more efficiently.
- Refactored environment variable loading in shared config.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # ============================================================
 # PULZIFI — copy this to .env and fill in your values
+# Required vars (marked with [REQUIRED]) will crash the server on startup if missing.
 # ============================================================
 
 # ============================================================
@@ -9,69 +10,81 @@ ENVIRONMENT=development
 LOG_LEVEL=info
 
 # ============================================================
-# DATABASE
+# DATABASE [REQUIRED]
 # ============================================================
-DB_HOST=postgres
-DB_PORT=5432
-DB_NAME=pulzifi
-DB_USER=pulzifi_user
-DB_PASSWORD=pulzifi_password
+DB_HOST=
+DB_PORT=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
 
 # ============================================================
 # SERVER
 # ============================================================
 HTTP_PORT=9090
 ENABLE_WORKERS=true
-# Dev: http://localhost:3000 | Production: https://yourdomain.com
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=
 # Dev: localhost | Production: .yourdomain.com
-COOKIE_DOMAIN=localhost
+COOKIE_DOMAIN=
 
 # ============================================================
-# CORS
-# Dev: localhost | Production: https://app.yourdomain.com
+# CORS [REQUIRED]
+# Dev: http://localhost:3000,http://*.localhost:3000
+# Production: https://app.yourdomain.com
 # ============================================================
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://*.localhost:3000,http://localhost:3001
+CORS_ALLOWED_ORIGINS=
 
 # ============================================================
-# AUTH
+# AUTH [REQUIRED]
 # ============================================================
-JWT_SECRET=change-me-in-production
+JWT_SECRET=
 JWT_EXPIRATION=3600
 JWT_REFRESH_EXPIRATION=604800
 
 # ============================================================
-# OBJECT STORAGE (Cloudinary)
+# EXTRACTOR — Playwright screenshot service [REQUIRED]
+# Docker: http://extractor:3000
 # ============================================================
-OBJECT_STORAGE_PROVIDER=cloudinary
+EXTRACTOR_URL=
+
+# ============================================================
+# OBJECT STORAGE
+# ============================================================
+OBJECT_STORAGE_PROVIDER=minio
+
+# MinIO / LocalStack
+MINIO_ENDPOINT=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_BUCKET=
+MINIO_USE_SSL=false
+MINIO_PUBLIC_URL=
+
+# Cloudinary (alternative)
+# OBJECT_STORAGE_PROVIDER=cloudinary
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-CLOUDINARY_FOLDER=pulzifi
+CLOUDINARY_FOLDER=
 
 # ============================================================
-# EXTRACTOR (Playwright screenshot service)
-# ============================================================
-EXTRACTOR_URL=http://extractor:3000
-
-# ============================================================
-# AI INSIGHTS (OpenRouter)
+# AI INSIGHTS (OpenRouter) — optional
 # ============================================================
 OPENROUTER_API_KEY=
-OPENROUTER_MODEL=stepfun/step-3.5-flash:free
+OPENROUTER_MODEL=mistralai/mistral-7b-instruct:free
 
 # ============================================================
-# EMAIL (Resend) — falls back to noop if not set
+# EMAIL (Resend) — optional, email disabled if not set
 # ============================================================
-# RESEND_API_KEY=
-# EMAIL_FROM_ADDRESS=noreply@yourdomain.com
-# EMAIL_FROM_NAME=Pulzifi
+RESEND_API_KEY=
+EMAIL_FROM_ADDRESS=
+EMAIL_FROM_NAME=
 
 # ============================================================
 # OAUTH — optional, provider only enabled when keys are set
 # ============================================================
-# GOOGLE_CLIENT_ID=
-# GOOGLE_CLIENT_SECRET=
-# GITHUB_CLIENT_ID=
-# GITHUB_CLIENT_SECRET=
-# OAUTH_REDIRECT_BASE_URL=http://localhost:9090
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+OAUTH_REDIRECT_BASE_URL=
