feat: add sidebar skeleton component for loading state
feat: implement checks data loader for usage feature

fix: update workspace detail content to handle page updates and monitoring config

feat: create workspace detail skeleton for loading state

fix: update next-env.d.ts for correct route types import

fix: update proxy matcher to exclude images path

feat: add landing images for marketing purposes

chore: update bun.lockb for dependency changes

style: adjust notix.css for anchor popup width

feat: add user profile update and password change API endpoints

feat: extend page API to include monitoring configuration on page creation

feat: add checkbox, radio group, tags input, and textarea components

fix: update breadcrumb component to accept React nodes for labels

fix: adjust notification button size and notification badge positioning

feat: enhance header component to include checks slot for notifications

--- a/docker-compose.monolith.yml
+++ b/docker-compose.monolith.yml
@@ -16,6 +16,9 @@ services:
   # ============================================================
   # DATABASE SERVICES
   # ============================================================
+  # TOGGLE: Comment/uncomment the postgres service below for LOCAL mode
+  # For LOCAL: uncomment postgres + use DB_HOST: postgres in monolith/worker
+  # For PRODUCTION (Railway): comment out postgres + use DB_HOST: shinkansen.proxy.rlwy.net
 
   postgres:
     image: postgres:17-alpine
@@ -113,11 +116,9 @@ services:
         condition: service_healthy
     environment:
       HTTP_PORT: 9090
-      DB_HOST: postgres
-      DB_USER: ${DB_USER:-pulzifi_user}
-      DB_PASSWORD: ${DB_PASSWORD:-pulzifi_password}
-      DB_NAME: ${DB_NAME:-pulzifi}
-      # REDIS_HOST: pulzifi-redis-monolith
+      # All DB config comes from .env
+      # For LOCAL: DB_HOST=postgres (service name)
+      # For PROD: DB_HOST=shinkansen.proxy.rlwy.net
       MINIO_ENDPOINT: localstack:4566
       MINIO_ACCESS_KEY: test
       MINIO_SECRET_KEY: test
@@ -125,11 +126,11 @@ services:
       MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
       MINIO_PUBLIC_URL: http://localhost:4566
       EXTRACTOR_URL: http://extractor:3000
-      # REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
       ENVIRONMENT: development
       ENABLE_WORKERS: "false"
     env_file:
       - .env
+      - .env.docker  # Overrides DB_HOST for docker (postgres/Railway)
     ports:
       - "9090:9090"
     volumes:
@@ -159,22 +160,20 @@ services:
       extractor:
         condition: service_healthy
     environment:
-      DB_HOST: postgres
-      DB_USER: ${DB_USER:-pulzifi_user}
-      DB_PASSWORD: ${DB_PASSWORD:-pulzifi_password}
-      DB_NAME: ${DB_NAME:-pulzifi}
-      # REDIS_HOST: pulzifi-redis-monolith
+      # All DB config comes from .env
+      # For LOCAL: DB_HOST=postgres (service name)
+      # For PROD: DB_HOST=shinkansen.proxy.rlwy.net
       MINIO_ENDPOINT: localstack:4566
       MINIO_ACCESS_KEY: test
       MINIO_SECRET_KEY: test
       MINIO_BUCKET: ${MINIO_BUCKET:-pulzifi-snapshots}
       MINIO_USE_SSL: ${MINIO_USE_SSL:-false}
       EXTRACTOR_URL: http://extractor:3000
-      # REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password}
       ENVIRONMENT: development
       ENABLE_WORKERS: "true"
     env_file:
       - .env
+      - .env.docker  # Overrides DB_HOST for docker (postgres/Railway)
     volumes:
       - .:/workspace
     networks:
